# opencode-web-platform

./: .env.example  .gitignore  README.md  docker-compose.yml  verify_test_setup.sh
.github/workflows/: ci.yml  test.yml
backend/: .env.example  Dockerfile  pyproject.toml  requirements-test.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/api/: __init__.py  auth.py  files.py  sessions.py  skills.py  users.py  websocket.py
backend/app/core/: limiter.py  permissions.py  security.py
backend/app/models/: __init__.py  app.py  file.py  session.py  skill.py  user.py
backend/app/schemas/: __init__.py  file.py  session.py  skill.py  user.py
backend/app/utils/: opencode_sidecar.py
backend/tasks/: agent_tasks.py  celery_app.py
backend/tests/: conftest.py  test_opencode_sidecar.py
backend/tests/fixtures/: users.py
backend/tests/test_api/: test_auth.py
config/: agents.json  team_config.json
docs/: CI_FIX.md  DELIVERY_CHECKLIST.md  DEV_WORKFLOW.md  DEV_WORKFLOW_V3.md  MANAGEMENT_HIERARCHY_CORRECTED.md  NEW_ROLES_DESIGN.md  P0_FIX_TASKS.md  PHASE0_COMPLETION_REPORT.md  PHASE0_PLAN.md  PHASE1_PLAN.md  PM_ROLE_REDESIGN.md  PROJECT_ANALYSIS.md  PROJECT_REVIEW.md  TEAM_CONFIG_ADJUSTMENT.md  TEAM_CONFIG_COMPLETE.md  WORKFLOW_REDESIGN_V4.md
docs/testing/: README.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: auth.ts  client.ts
scripts/: track_cicd.py
(+19 files in other folders)
